<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.cna</groupId>
	<artifactId>ublkit-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
	<name>ublkit-parent</name>
	<description>Parent POM for UBLKit Java</description>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>

	<dependencies>
		<!-- Testing dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
	</dependencies>

    <modules>
        <module>ublkit-core</module>
        <module>ublkit-ubl</module>
        <module>ublkit-sign</module>
        <module>ublkit-gateway</module>
        <module>ublkit-render</module>
        <module>ublkit-validation</module>
        <module>ublkit-catalogs</module>
        <module>ublkit-testkit</module>
        <module>ublkit-spring-boot-starter</module>
        <module>ublkit-quarkus</module>
    </modules>

</project>
